test/neg/float-literal.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((v2 Obj a_aZU)) (=> True (>= v2 1.00000))))
